# NikiScript

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Conventions.md  LICENSE.txt  README.md  SweatCI.cpp  SweatCI.h  TODO.md  build.sh  build_static.sh  release32.sh  release64.sh  run.bat  todo.md
Obsidian/: Concept.canvas  Implementation.canvas  Maybe not use uint64_t for strings and made them smaller.md
Obsidian/.obsidian/: workspace.json
cmake/: FindNikiScript.cmake
docs/: Doxyfile  _base_wrapper_8cpp.html  _base_wrapper_8cpp.js  _base_wrapper_8cpp__incl.map  _base_wrapper_8cpp__incl.md5  _base_wrapper_8h.html  _base_wrapper_8h.js  _base_wrapper_8h__dep__incl.map  _base_wrapper_8h__dep__incl.md5  _base_wrapper_8h__incl.map  _base_wrapper_8h__incl.md5  _base_wrapper_8h_source.html  _command_8cpp.html  _command_8cpp.js  _command_8cpp__incl.dot  _command_8cpp__incl.map  _command_8cpp__incl.md5  _command_8h.html  _command_8h.js  _command_8h__dep__incl.dot  _command_8h__dep__incl.map  _command_8h__dep__incl.md5  _command_8h__incl.dot  _command_8h__incl.map  _command_8h__incl.md5  _command_8h_source.html  _command_handler_8cpp.html  _command_handler_8cpp__incl.dot  _command_handler_8cpp__incl.map  _command_handler_8cpp__incl.md5  _command_handler_8h.html  _command_handler_8h.js  _command_handler_8h__dep__incl.dot  _command_handler_8h__dep__incl.map  _command_handler_8h__dep__incl.md5  _command_handler_8h__incl.dot  _command_handler_8h__incl.map  _command_handler_8h__incl.md5  _command_handler_8h_source.html  _command_handler_wrapper_8cpp.html  (+268 more)
docs/doxygen-custom/: header.html
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  functions_func.html  namespacemembers_enum.html  namespaces_dup.js  navtreedata.js  structns_1_1_command.html  structns_1_1_command_handler-members.html  structns_1_1_command_handler.html  structns_1_1_program_variable-members.html  structns_1_1_token-members.html  structns_1_1_token.js
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  files_0.js  files_1.js  files_3.js  files_5.js  files_6.js  files_8.js  functions_0.js  (+36 more)
doxygen/: Doxyfile  doxygen-awesome-darkmode-toggle.js  doxygen-awesome-interactive-toc.js
example/: CMakeLists.txt
example/cfg/: comments.cfg  test.cfg  var_inserts.cfg  variables.cfg
example/src/: example.cpp
examples/: CMakeLists.txt
examples/BasicExample/src/: Main.cpp
examples/JobSystem/src/: Main.cpp
html/: dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0_dep.dot  doxygen_crawl.html  example_8cpp.html  example_8cpp.js  globals.html  globals_defs.html  globals_vars.html  index.html  index.js  md__c_1_2_users_2emilly_2_documents_2_lucca_2_projetos_2_cpp_2_niki_script_2_conventions.html  menudata.js  namespacemembers.html  namespacemembers_eval.html  namespacemembers_func.html  namespacemembers_vars.html  namespacens.html  namespaces.html  navtreeindex0.js  navtreeindex1.js  pages.html  structns_1_1_arguments-members.html  structns_1_1_context.html  structns_1_1_context.js  structns_1_1_lexer-members.html  structns_1_1_program_variable.html
src/: Command.cpp  Command.h  CommandContext.cpp  CommandContext.h  CommandHandler.cpp  CommandHandler.h  Context.cpp  Context.h  DLLExport.h  Lexer.cpp  Lexer.h  NikiScript.cpp  NikiScript.h  Parser.cpp  Parser.h  PrintCallback.cpp  PrintCallback.h  ProgramVariable.cpp  ProgramVariable.h  SweatCI.cpp  SweatCI.h  SweatContext.cpp  SweatContext.h  SweatString.cpp  SweatString.h  Token.cpp  Token.h  Utils.cpp  Utils.h  Variable.cpp  Variable.h
wrapper/: BaseWrapper.h  CommandHandlerWrapper.cpp  CommandHandlerWrapper.h  ProgramVariableWrapper.cpp  ProgramVariableWrapper.h  TokenWrapper.cpp  TokenWrapper.h
(+103 files in other folders)
